# TaskMasterpp

./: .gitmodules  CMakeLists.txt  PLAN.md  README.md
data/: tasks.json
data/users/indective/: indective
data/users/muhammad/: muhammad  tasks.json
include/: bcrypt.h  taskmaster.h  taskmaster.hpp  usermanager.h
src/: main.cpp  taskmanager.cpp  usermanager.cpp
